2005-08-15  Florian Boor  <florian@kernelconcepts.de>

	* debian/rules: Change prefix to match latest Hildon requirements.

2005-08-13  Martin Felis <martin@silef.de>
	* vcard.c: Fixed the following fields:
	           "web adress","notes","honorific_prefix"
		   Made the exportation of the adress compatible to
		   evolution.
		   Imports now only two email adresses.
	         
2005-06-21  Florian Boor  <florian@kernelconcepts.de>

	* Release Version 0.12

2005-06-04  Florian Boor  <florian@kernelconcepts.de>

	* doc/gtk-doc.make: Fixed doc build support not to fail in some
                            situations.
	* debian/*: Add support for maemo debian packages.
	* configure.ac: Version to 0.12.


2005-04-25  Florian Boor  <florian@kernelconcepts.de>

	* Makefile.am: Add missing header file.
	* configure.ac: gtk-doc 1.0 is too old.
	* doc/Makefile.am: Replaced by new, improved file.
	* doc/gtk-doc.make: New file providing better gtk-doc support.

2005-04-18  Florian Boor  <florian@kernelconcepts.de>

	* Introduce ChangeLog
	* Add support for autotools.